# DnD-DB-Tool

./: Cargo.toml  README.md  notes
data/: dnd.db
src/: lib.rs  main.rs  traits.rs
src/structs/: class.rs  data_connection.rs  mod.rs  race.rs  status.rs
