[package]
name = "dnd_db_talker"
version = "0.7.0"
authors = ["jsj1027 <jsj1027@g.rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
rand = "0.7.3"
# fake = "2.2.0"
# spectral = "0.6.0"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[lib]
name = "db_lib"
path = "src/lib.rs"


[[bin]]
name = "db_bin"
path = "src/main.rs"
